--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,44 @@ body {
 a {
   color: #00B7FF;
 }
+
+/* nav bar */
+body > nav {
+  grid-area: nav;
+  background-color: lightgrey;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px 0 30px;
+}
+
+/* nav buttons */
+nav > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  border: solid black;
+}
+
+nav > a:hover:not(.active) {
+  color: white;
+  background-color: thistle;
+}
+
+nav > a.active {
+  color: white;
+  cursor: default;
+}
+
+/* for login */
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 34px;
+}
+
+.login img {
+  height: 30px;
+}
