add show ejs to movies

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -19,6 +19,7 @@
                 <td><%= b.publishYear %></td>
                 <td><%= b.genre %></td>
                 <td><%= b.description %></td>
+                <td><a href="/books/<%= b._id %>">Details</a></td>
             </tr>
         <% }); %>
     </tbody>
