--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <% if (user) { %>
-            <a href="/books">Home</a>
+            <a href="/books">Book Recommendations</a>
             <a href="/books/new">Add Books</a>
             <a href="/logout">LOG OUT</a>
         <% } else { %>
