added seperate details for each book

--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,4 +1,20 @@
 <%- include('../partials/header') %>
 
+<section id="show-page">
+    <div>Title: </div>
+    <div><%= book.title %></div>
+    <br>
+    <div>Author: </div>
+    <div><%= book.author %></div>
+    <br>
+    <div>Publish Year: </div>
+    <div><%= book.publishYear %></div>
+    <br>
+    <div>Genre: </div>
+    <div><%= book.genre %></div>
+    <br>
+    <div>Description: </div>
+    <div><%= book.description %></div>
+</section>
 
 <%- include('../partials/footer') %>
