--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,3 +47,15 @@ nav > a.active {
 .login img {
   height: 30px;
 }
+
+#add-review-form {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+}
+
+#add-review-form input[type="submit"] {
+  width: 8rem;
+  grid-column: 2 / 3;
+  margin-bottom: 2rem;
+}
