--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -16,5 +16,23 @@
     <div>Description: </div>
     <div><%= book.description %></div>
 </section>
+    <!-- ratings -->
+    <br><br><h2>Ratings</h2>
+    <form action="add-rating-form" method="POST" action="/books/<%= book._id %>/ratings">
+        <label>Rating:</label>
+        <select name="rating">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10" selected>10</option>
+        </select>
+        <input type="submit" value="Rate the book">
+    </form>
 
 <%- include('../partials/footer') %>
