completed ratings now visible on the app

--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -18,7 +18,7 @@
 </section>
     <!-- ratings -->
     <br><br><h2>Ratings</h2>
-    <form action="add-rating-form" method="POST" action="/books/<%= book._id %>/ratings">
+    <form id="add-rating-form" method="POST" action="/books/<%= book._id %>/ratings">
         <label>Rating:</label>
         <select name="rating">
             <option value="1">1</option>
