--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,3 +59,12 @@ nav > a.active {
   grid-column: 2 / 3;
   margin-bottom: 2rem;
 }
+
+#delete-form {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+#delete-form button {
+  color: lightcoral;
+}
