--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,6 +20,12 @@
                 <td><%= b.genre %></td>
                 <td><%= b.description %></td>
                 <td><a href="/books/<%= b._id %>">Details</a></td>
+                <td></td>
+                <td>
+                    <form action="/books/<%= b._id %>?_method=DELETE" id="delete-form" method="POST">
+                        <button type="submit">Delete</button>
+                    </form>
+                </td>
             </tr>
         <% }); %>
     </tbody>
