--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -1,12 +1,44 @@
 <%- include('../partials/header') %>
 
-<h2>Edit Book Recommendations</h2>
+<h2>Edit Book Rating</h2>
 
 <form action="/books/<%= book._id %>?_method=PUT" method="POST">
     <label>Title:
         <input type="text" name="title" value="<%= book.title %>">
     </label><br><br>
-    <button type="submit">Edit Book Rec</button>
+    <label>Author:
+        <input type="text" name="author" value="<%= book.author %>">
+    </label><br><br>
+    <label>Publish Year:
+        <input type="number" name="publishYear" value="<%= book.publishYear %>">
+    </label><br><br>
+    <label>Genre
+        <select name="genre">
+            <option value="Fiction">Fiction</option>
+            <option value="Non-Fiction">Non-Fiction</option>
+            <option value="Fantasy">Fantasy</option>
+            <option value="Science Fiction">Science Fiction</option>
+            <option value="Action & Adventure">Action & Adventure</option>
+            <option value="Mystery">Mystery</option>
+            <option value="Horror">Horror</option>
+            <option value="Thriller & Suspense">Thriller & Suspense</option>
+            <option value="Romance">Romance</option>
+            <option value="Graphic Novel">Graphic Novel</option>
+            <option value="Children's">Children's</option>
+            <option value="Autobiography">Autobiography</option>
+            <option value="Biography">Biography</option>
+            <option value="Histoy">Histoy</option>
+            <option value="True Crime">True Crime</option>
+            <option value="Comedy">Comedy</option>
+            <option value="Poetry">Poetry</option>
+            <option value="Other">Other</option>
+        </select>
+    </label><br><br>
+    <label>Description
+        <textarea name="description" cols="30" rows="8"></textarea>
+    </label><br><br>
+    <button type="submit">Update Book Recommendation</button>
 </form>
+
 
 <%- include('../partials/footer') %>
