full crud acheived

--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -35,7 +35,7 @@
         </select>
     </label><br><br>
     <label>Description
-        <textarea name="description" cols="30" rows="8"></textarea>
+        <textarea name="description" cols="30" rows="8"><%= book.description %></textarea>
     </label><br><br>
     <button type="submit">Update Book Recommendation</button>
 </form>
