--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,10 @@
 <%- include('./partials/header') %>
 
+<h2>Home Page</h2>
+    <h3>
+        Welcome to The Book Club! A place where you can share your latest reads and favorite books of all genres.
+        Sign up to see other users book recommendations and to be able to add your own to share!
+    </h3>
+
+
 <%- include('./partials/footer') %>
