--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <title>The Book Club</title>
 </head>
 <body>
-    <nav>
+    <h1>The Book Club</h1>
+    <nav class="navbar navbar-expand-sm bg- navbar-dark sticky-top justify-content-end">
         <% if (user) { %>
             <a href="/">Home</a>
             <a href="/books">Book Recommendations</a>
@@ -18,5 +22,4 @@
         <% } %>
     </nav>
 <main>
-    <h1>The Book Club</h1>
  
