--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -36,7 +36,7 @@
     <label class="form-label">Description
         <textarea class="form-control" name="description" cols="30" rows="8"></textarea>
     </label><br><br>
-    <button type="button" class="btn btn-outline-success">Add Book</button>
+    <button type="submit" class="btn btn-outline-success">Add Book</button>
 </form>
 <p><%= errorMsg %></p>
 
