--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -58,7 +58,7 @@
                     <td><%= r.rating %></td>
                     <td>
                         <form action="/ratings/<%= r._id %>?_method=DELETE" id="delete-form" method="POST">
-                            <button type="button" class="btn btn-outline-danger">Delete</button>
+                            <button type="submit" class="btn btn-outline-danger">Delete</button>
                         </form>
                     </td>
                 </tr><br><br>
