--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,12 @@
 <%- include('./partials/header') %>
 
-<h2>Home Page</h2>
-    <h3>
+<br><br>
+<h2 class="text-center">Home Page</h2>
+<br><br>
+    <h3 class="text-center">
         Welcome to The Book Club! A place where you can share your latest reads and favorite books of all genres.
         Sign up to see other users book recommendations and to be able to add your own to share!
-    </h3>
+    <h3>
 
 
 <%- include('./partials/footer') %>
