--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,13 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Abril Fatface', cursive;
   justify-content: center;
   text-align: center;
+  background-image: url('gulfer-ergin-LUGuCtvlk1Q-unsplash.jpg');
 }
 
 a {
-  color: #00B7FF;
+  color: black;
 }
 
 /* nav bar */
@@ -21,9 +22,9 @@ body > nav {
 
 /* nav buttons */
 nav > a {
-  margin: 20px;
+  margin: 10px;
   text-decoration: none;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   border: solid black;
 }
