--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <img src="" alt="">
     <title>The Book Club</title>
 </head>
 <body>
-    <h1>The Book Club</h1>
+    <h1 class="justify-content-center">The Book Club</h1>
     <nav class="navbar navbar-expand-sm bg- navbar-dark sticky-top justify-content-end">
         <% if (user) { %>
-            <a href="/">Home</a>
-            <a href="/books">Book Recommendations</a>
-            <a href="/books/new">Add Books</a>
+            <a href="/">HOME</a>
+            <a href="/books">BOOK RECOMMENDATIONS</a>
+            <a href="/books/new">ADD BOOKS</a>
             <a href="/logout">LOG OUT</a>
         <% } else { %>
             <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
