--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,43 +1,45 @@
 <%- include('../partials/header') %>
 
 <h2>New Book Recommendations</h2>
-<form action="/books" method="POST">
-    <label class="form-label">Title:
-        <input class="form-control" type="text" name="title">
-    </label><br><br>
-    <label class="form-label">Author:
-        <input class="form-control" type="text" name="author">
-    </label><br><br>
-    <label class="form-label">Publish Year:
-        <input class="form-control" type="number" name="publishYear">
-    </label><br><br>
-    <label class="form-label">Genre
-        <select class="form-select" name="genre">
-            <option value="Fiction">Fiction</option>
-            <option value="Non-Fiction">Non-Fiction</option>
-            <option value="Fantasy">Fantasy</option>
-            <option value="Science Fiction">Science Fiction</option>
-            <option value="Action & Adventure">Action & Adventure</option>
-            <option value="Mystery">Mystery</option>
-            <option value="Horror">Horror</option>
-            <option value="Thriller & Suspense">Thriller & Suspense</option>
-            <option value="Romance">Romance</option>
-            <option value="Graphic Novel">Graphic Novel</option>
-            <option value="Children's">Children's</option>
-            <option value="Autobiography">Autobiography</option>
-            <option value="Biography">Biography</option>
-            <option value="Histoy">Histoy</option>
-            <option value="True Crime">True Crime</option>
-            <option value="Comedy">Comedy</option>
-            <option value="Poetry">Poetry</option>
-            <option value="Other">Other</option>
-        </select>
-    </label><br><br>
-    <label class="form-label">Description
-        <textarea class="form-control" name="description" cols="30" rows="8"></textarea>
-    </label><br><br>
-    <button type="submit" class="btn btn-outline-success">Add Book</button>
-</form>
+<div class="container d-flex justify-content-center">
+    <form id="new-book" action="/books" method="POST">
+            <label class="form-label">Title:
+                <input class="form-control" type="text" name="title">
+            </label><br><br>
+            <label class="form-label">Author:
+                <input class="form-control" type="text" name="author">
+            </label><br><br>
+            <label class="form-label">Publish Year:
+                <input class="form-control" type="number" name="publishYear">
+            </label><br><br>
+            <label class="form-label">Genre
+                <select class="form-select" name="genre">
+                    <option value="Fiction">Fiction</option>
+                    <option value="Non-Fiction">Non-Fiction</option>
+                    <option value="Fantasy">Fantasy</option>
+                    <option value="Science Fiction">Science Fiction</option>
+                    <option value="Action & Adventure">Action & Adventure</option>
+                    <option value="Mystery">Mystery</option>
+                    <option value="Horror">Horror</option>
+                    <option value="Thriller & Suspense">Thriller & Suspense</option>
+                    <option value="Romance">Romance</option>
+                    <option value="Graphic Novel">Graphic Novel</option>
+                    <option value="Children's">Children's</option>
+                    <option value="Autobiography">Autobiography</option>
+                    <option value="Biography">Biography</option>
+                    <option value="Histoy">Histoy</option>
+                    <option value="True Crime">True Crime</option>
+                    <option value="Comedy">Comedy</option>
+                    <option value="Poetry">Poetry</option>
+                    <option value="Other">Other</option>
+                </select>
+            </label><br><br>
+            <label class="form-label">Description
+                <textarea class="form-control" name="description" cols="30" rows="8"></textarea>
+            </label><br><br>
+            <button type="submit" class="btn btn-outline-success">Add Book</button>
+    </form>
+</div>
 <p><%= errorMsg %></p>
 
 <%- include('../partials/footer') %>
